Sun Apr 19 10:42:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (get_env_cstr): environment variables must be ASCII
	  compatible, as dummy encodings and wide char encodings are
	  unsupproted now.

Sat Apr 18 15:18:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/parser/parser.rl: raise with messages in UTF-8
	  encoding.  [ruby-core:67386] [Bug #10705]

Fri Apr 17 11:58:34 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (STR_SET_EMBED): clear NOFREE flag at embedding as
	  embedded strings no longer refer static strings.
	  [ruby-core:68436] [Bug #10942]

Thu Apr 16 05:15:50 2015  Eric Wong  <e@80x24.org>

	* NEWS: note IO#wait_readable change in r50263

Thu Apr 16 05:09:36 2015  Eric Wong  <e@80x24.org>

	* lib/net/protocol.rb (rbuf_fill): use IO#wait_*able
	* lib/net/http/generic_request.rb (wait_for_continue): ditto
	  [ruby-core:68891] [Feature #11056]

Wed Apr 15 18:43:43 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (rb_tracepoint_new): fix documentation.
	  Commented by @emilsoman.

Wed Apr 15 17:36:51 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (rb_tracepoint_new): Add documentation for
	  rb_tracepoint_new C level API [ci skip]
	  Provided by @emilsoman. [fix GH-869]

Wed Apr 15 10:37:40 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/contributors.rdoc: fix a typo. Patch by @davydovanton
	  [fix GH-872][ci skip]
	* doc/syntax/methods.rdoc: ditto.
	* ext/digest/sha2/sha2.c: ditto.
	* ext/socket/ipsocket.c: ditto.
	* ext/tk/*: ditto.

Wed Apr 15 07:51:23 2015  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* doc/extension.ja.rdoc: Added description of TypedData_XXX.
	  Deprecated the old DATA_XXX.
	  Reviewed by ko1 and nobu.
	  Fixes [ruby-dev:40881] #3064

	* doc/extension.rdoc: ditto.

Wed Apr 15 07:34:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (reserve_stack): keep sp safe zone to get rid
	  of crash by -fstack-check.  [ruby-core:68740] [Bug #11030]
